cluster/apps/home-system/frigate/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: release-name-frigate
  labels:
    app.kubernetes.io/name: frigate
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: frigate
